--- a/정리/4.엔티티매핑.md
+++ b/정리/4.엔티티매핑.md
@@ -163,3 +163,157 @@ public class Board{
 }
 ```
 JPA는 기본키값을 얻어오기위해 DB를 추가로 조회한다.
+- JDBC3에 추가된 Statement.getGeneratedKeys()를 사용하는데, 데이터 저장하면서 동시에 생성된 키값도 얻어온다.
+- 설명에서 볼 수 있듯, persist() 하는순간 DB 저장이 실행된다. 그래서 Transactional write-behind가 작동하지 않는다.
+
+SEQUENCE는 유일값을 순서대로 생성하는 특별한 DB 오브젝트다.
+- Oracle, PostgreSQL, DB2, H2에서 사용할 수 있다.
+
+사용 전 먼저 시퀀스를 생성해보자.
+
+```sql
+CREATE TABLE BOARD (
+    ID BIGINT NOT NULL PRIMARY KEY ,
+    DATA VARCHAR(255)
+)
+
+CREATE SEQUENCE BOARD_SEQ START WITH 1 INCREMENT BY 1;
+```
+매핑은 시퀀스객체도 명시해야 한다.
+
+```java
+@Entity
+@SequenceGenerator( // 이 어노테이션은 @GeneratedValue 옆에 사용해도 된다.
+        name = "BOARD_SEQ_GENERATOR"
+        sequenceName = "BOARD_SEQ",
+        initialValue = 1, allocationSize = 1
+)
+public class Board {
+  @Id
+  @GeneratedValue(strategy = GenerationType.SEQUENCE,
+          generator = "BOARD_SEQ_GENERATOR")
+  private Long id;
+
+}
+```
+allocationSize는 INCREMENT를 의미한다.
+- 기본값이 50인데, 최적화때문이다.
+  - DB접근 횟수를 줄이기 위해 한번에 50만큼의 메모리에 시퀀스값을 할당한다.
+  - 시퀀스값을 선점하므로 여러 JVM이 동작해도 키값충돌이 일어나지 않는다.
+  - 한번 write마다 많이 증가하므로, 이런게 부담스럽고 INSERT 성능이 중요하지 않으면 1로 설정하자.
+  - hibernate.id.new_generator_mappings가 true로 설정되어야 설명한 대로 동작한다.
+    - 미적용시 과거 방식으로 최적화하는데, 시퀀스값을 하나씩 받고 allocationSize만큼 사용했다.
+    - 즉, 시퀀스값이 1이면 1~50까지, 2면 51~100 까지 사용했다.
+- DB의 시퀀스 INCERMENT를 1로 설정했으면 반드시 1로 설정해주도록 하자.
+
+내부동작은 IDENTITY와 다른데, persist() 호출 시 DB 시퀀스를 사용해서 식별자를 조회한다. 즉 저장이 일어나지 않는다. 하지만 조회는 여전히 일어난다.
+
+
+TABLE 전략은 TABLE을 통해 SEQUENCE를 흉내내는 방식이다. 모든 DB에 사용할 수 있다.
+
+```sql
+# 아래 Column명이 기본값으로 사용된다.
+CREATE TABLE MY_SEQUENCES (
+    sequence_name varchar(255) not null,
+    next_val bigint,
+    primary key (sequence_name)
+)
+```
+
+```java
+@Entity
+@TableGenerator (
+        name = "BOARD_SEQ_GENERATOR",
+        table = "MY_SEQUENCES",
+        pkColumnValue = "BOARD_SEQ", allocationSize = 1
+)
+public class Board {
+    @Id
+    @GeneratedValue(strategy = GenerationType.TABLE,
+                    generator = "BOARD_SEQ_GENERATOR")
+    private Long id;
+}
+```
+
+@TableGenerator 추가적 속성은 다음과 같다.
+- pkColumnName : 시퀀스 컬럼 명. 기본 sequence_name
+- valueColumnName : 시퀀스 값 컬럼명. 기본 next_val
+- pkColumnValue : 키로 사용할 값 이름. 기본 엔티티 이름
+- initialValue : 초기값. 마지막으로 생성된 값이 기준이다.
+- allocationSize
+- catalog, schema : DB catalog, schema 이름
+- uniqueConstraints(DDL) : 유니크 제약조건 지정가능
+
+SEQUENCE와 유사하게 동작하나, SELECT로 값을 조회하고, UPDATE로 증가시키는 2번통신하는 방법을 사용하게 된다. allocationSize로 최적화한다.
+
+
+AUTO의 경우 선택한 Dialect에 따라 세가지 전략 중 하나를 자동으로 선택한다.
+
+```java
+@Entity
+public class Board {
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private Long id;
+}
+```
+장점은 DB 변경시 수정할 필요가 없다. 키 생성전략이 확정되지않은 초기단계 / 프로토타입 개발 시 편리하게 사용가능하다.
+
+### 6-3 기본키 선택전략
+
+기본키는 3가지 조건을 만족해야 한다.
+- not null
+- unique
+- 변동없음
+
+주민번호같은걸 기본키로 설정했다가 주민번호 저장 못하게 법이 바뀌니 수많은 변경사항이 발생했다. 비즈니스 환경은 언젠가는 변한다.
+
+그래서 외부요건에 변하지 않는 대리키를 사용하는 것을 권장한다. JPA는 모든 엔티티에 일관된 방식으로 대리키 사용을 권장한다.
+
+기본키는 변하면 안된다는 기본원칙에 의해, 저장된 엔티티의 기본키값은 절대 변경하면 안된다.
+- JPA가 예외를 발생시키거나, 정상동작하지 않는다.
+- setId()같은 메서드를 외부에 공개하지 않는것도 한 방법이다.
+
+## 7. 필드 및 컬럼 매핑
+
+- @Column
+  - name : 매핑될 table 컬럼 이름
+  - insertable : 엔티티 저장 시 이 필드도 같이 저장. 기본 true이며, 읽기전용일때 false로 한다. 거의 사용 X
+  - updatable : 위와 비슷. 거의 사용 X
+  - table : 하나의 Entity를 2개 이상의 table에 매핑할 때 사용한다. 거의 사용 X
+  - nullable(DDL) : 기본적으로 true이다.
+    - 원시타입에는 null이 할당될 수 없어 JPA DDL이 not null을 자동추가하지만, @Column이 붙으면 true가 된다. 따로 지정해주자.
+  - unique(DDL) : Table의 uniqueConstraints와 같지만, 한 컬럼에 간단히 걸 때 사용한다.
+  - columnDefinition(DDL) : DB Column 정보 직접 제공.
+    - columnDefinition = "varchar(100) default 'EMPTY'" 처럼 TYPE 외에도 제공가능하다.
+  - length(DDL) : String에만 사용한다. 길이제약.
+  - precision, scale(DDL) : BigDecimal / BigInteger 에 사용한다. float, double에는 적용되지 않는다.
+    - precision : 소수점 포함 전체 자릿수
+    - scale : 소수 자릿수
+    - 아주 큰 숫자나 정밀한 소수 다루어야 할 때만 사용한다.
+- @Enumerated
+  - vale : EnumType.ORDINAL / STRING
+    - ORDINAL 사용 시 이미 저장된 enum 순서 변경할 수 없다. 주의해서 사용해야 한다. STRING을 권장한다.
+- @Temporal
+  - Date, Calendar 매핑에 사용
+  - value : TemporalType.DATE / TIME / TIMESTAMP
+    - Java는 Date로 다 가능하지만 DB는 date, time, timestamp 3가지 타입이 존재한다.
+    - @Temporal 생략 시 timestamp로 정의된다.
+- @Lob
+  - 타입이 String, char[]이면 CLOB으로, 나머지는 BLOB으로 저장한다.
+- @Transient
+  - 해당 필드는 매핑하지 않는다.
+- @Access
+  - JPA가 데이터에 접근하는 방식 지정
+    - AccessType.FIELD / PROPERTY 이며, private여도 접근가능하고 Getter 사용여부를 의미한다.
+  - @Access 미 설정 시 @Id 위치(getter에 있는지?)를 기준으로 접근방식을 설정한다.
+  - Class 위치에 @Access(AccessType.FIELD) 처럼 사용한다.
+  - getter 위에 PROPERTY 지정하기를 통해 FIELD접근과 혼용할 수 있다.
+
+
+
+
+
+
+
+
