--- a/정리/7. 고급 매핑.md
+++ b/정리/7. 고급 매핑.md
@@ -123,8 +123,8 @@ public class Member2 extends BaseEntity {}
 
 ## 복합키 및 식별관계 매핑
 
-식별관계(Identifying) : 부모 PK를 PK + FK 로 사용하는 관계
-비식별관계 : 부모 PK를 FK로만 사용하는 관계
+**식별관계(Identifying)** : 부모 PK를 PK + FK 로 사용하는 관계  
+**비식별관계** : 부모 PK를 FK로만 사용하는 관계
 - 필수적 비식별 관계(Mandatory) : FK에 null 비허용. 연관관계 필수다.
 - 선택적 비식별 관계(Optional) : FK null 허용.
 
@@ -134,7 +134,24 @@ JPA는 둘 다 지원한다.
 복합키 사용은 따로 Key class를 분리하는 것을 이전에 살펴보았다. (@IdClass) @IdClass는 RDB에 가까운 방법이고, @EmbeddedId는 객체지향에 가까운 방법이다.
 복합키에는 @GenerateValue를 사용할 수 없다.
 
-### @IDclass
+### 비식별 관계애서 복합키 매핑
+
+Parent 와 Child의 관계를 보자.
+
+Parent
+- PARENT_ID1(PK)
+- PARENT_ID2(PK)
+- NAME
+
+Child
+- CHILD_ID(PK)
+- PARENT_ID1(FK)
+- PARENT_ID2(FK)
+- NAME
+
+이렇게 부모의 PK를 FK로만 사용하는 경우가 비식별관계이다.
+
+#### @IdClass
 
 ```java
 import javax.persistence.*;
@@ -209,7 +226,7 @@ ParentId parentId = new ParentId("myId1", "myId2");
 Parent parent = em.find(Parent.class, parentId);
 ```
 
-### @EmbeddedId
+#### @EmbeddedId
 
 ```java
 import javax.persistence.Column;
@@ -252,7 +269,7 @@ ParentId parentId = new ParentId("myId1", "myId2");
 Parent parent = em.find(Parent.class, parentId);
 ```
 
-### @IdClass vs @EmbeddedId
+#### @IdClass vs @EmbeddedId
 
 장단점이 있으므로, 취향에 맞는것을 일관적으로 적용하자.
 
@@ -265,17 +282,639 @@ em.createQurey("select p.id.id1, p.id.id2 from Parent p");
 em.createQurey("select p.id1, p.id2 from Parent p");
 ```
 
+### 식별관계에서 복합키 매핑
 
+PARENT
+- PARENT_ID (PK)
+- NAME
 
+CHILD
+- PARENT_ID(PK, FK)
+- CHILD_ID(PK)
+- NAME
 
+GRANDCHILD
+- PARENT_ID(PK, FK)
+- CHILD_ID(PK, FK)
+- GRANDCHILD_ID(PK)
+- NAME
 
+계속해서 기본키를 전달하는 식별관계이다.
+- 이런 식별관계에서 자식 테이블은 부모테이블 기본키를 포함한 복합키를 구성해야 한다.
+  - 즉, @IdClass 나 @EmbeddedId 를 사용해서 식별자를 매핑해야 한다.
 
+#### @IdClass
 
+```java
+import java.io.Serializable;
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.Id;
+import javax.persistence.IdClass;
+import javax.persistence.JoinColumn;
+import javax.persistence.JoinColumns;
+import javax.persistence.ManyToOne;
 
+@Entity
+public class Parent {
+    @Id
+    @Column(name = "PARENT_ID")
+    private String id;
+    private String name;
+    
+    ...
+}
 
+@Entity
+@IdClass(ChildId.class)
+public class Child {
+    @Id
+    @ManyToOne
+    @JoinColumn(name = "PARENT_ID")
+    public Parent parent;
 
+    @Id
+    @Column(name = "CHILD_ID")
+    private String childId;
 
+    private String name;
+    ...
+}
 
+// 자식 Id
+public class ChildId implements Serializable {
+    private String parent;
+    private String childId;
+
+    // equals, hash
+    ...
+}
+
+// 손자
+@Entity
+@IdClass(GrandChildId.class)
+public class GrandChild {
+    @Id
+    @ManyToOne
+    @JoinColumns({
+            @JoinColumn(name = "PARENT_ID"),
+            @JoinColumn(name = "CHILD_ID")
+    })
+    private Child child;
+    
+    @Id @Column(name = "GRANDCHILD_ID")
+    private String id;
+    private String name;
+    ...
+}
+
+public class GransChildId implements Serializable {
+    private ChildId child;
+    private String id;
+    
+    // equals, hash
+    ...
+}
+```
+
+@ManyToOne과 @Id 를 적절하게 사용해서 복합키를 만들어주는 모습이다.
+
+#### @EmbeddedId
+
+이때는 @MapsId 를 사용한다.
+
+```java
+import java.io.Serializable;
+import javax.persistence.Column;
+import javax.persistence.Embeddable;
+import javax.persistence.EmbeddedId;
+import javax.persistence.Entity;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.JoinColumns;
+import javax.persistence.ManyToOne;
+import javax.persistence.MapsId;
+
+@Entity
+public class Parent {
+    @Id
+    @Column(name = "PARENT_ID")
+    private String id;
+
+    private String name;
+    ...
+}
+
+// 자식
+@Entity
+public class Child {
+    @EmbeddedId
+    private ChildId id;
+
+    @MapsId("parentId")
+    @ManyToOne
+    @JoinColumn(name = "PARENT_ID")
+    public Parent parent;
+
+    private String name;
+    ...
+}
+
+// 자식 Id
+@Embeddable
+public class ChildId implements Serializable {
+    private String parentId;
+
+    @Column(name = "CHILD_ID")
+    private String id;
+
+    // equals, hashCode
+    ...
+}
+
+// 손자
+@Entity
+public class GrandChild {
+    @EmbeddedId
+    private GrandChildId id;
+
+    @MapsId("childId")
+    @ManyToOne
+    @JoinColumns({
+            @JoinColumn(name = "PARENT_ID"),
+            @JoinColumn(name = "CHILD_ID")
+    })
+    private Child child;
+    
+    private String name;
+    ...
+}
+
+// 손자 Id
+@Embeddable
+public class GrandChildId implements Serializable {
+    private ChildId childId;
+    
+    @Column (name = "GRANDCHILD_ID")
+    private String id;
+    
+    // equals, hash
+    ...
+}
+```
+
+@EmbeddedId 와 @MapsId 를 사용하여 복합키를 생성하는 모습이다.
+- @IdClass 와 다른 점은 @Id 대신 @MapsId 를 사용했다는 것.
+  - 외래키와 매핑한 연관관계를 기본키에도 매핑하겠다는 뜻이다.
+  - @MapsId 속성은 ID 클래스의 기본 키 필드를 지정하면 된다.
+
+#### 식별관계 -> 비식별 관계 변경
+
+앞선 예제를 비식별관게로 변경해보자.
+
+PARENT
+- PARENT_ID(PK)
+- NAME
+
+CHILD
+- CHILD_ID(PK)
+- PARENT_ID(FK)
+- NAME
+
+GRANDCHILD
+- GRANDCHILD_ID(PK)
+- CHILD_ID(FK)
+- NAME
+
+```java
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.ManyToOne;
+
+@Entity
+public class Parent {
+    @Id
+    @GeneratedValue
+    @Column(name = "PARENT_ID")
+    private Long id;
+    private String name;
+    ...
+}
+
+@Entity
+public class Child {
+    @Id
+    @GeneratedValue
+    @Column(name = "CHILD_ID")
+    private Long id;
+    private String name;
+
+    @ManyToOne
+    @JoinColumn(name = "PARENT_ID")
+    private Parent parent;
+    ...
+}
+
+@Entity
+public class GrandChild{
+    @Id @GeneratedValue
+    @Column(name = "GRANDCHILD_ID")
+    private Long id;
+    private String name;
+    
+    @ManyToOne
+    @JoinColumn(name = "CHILD_ID")
+    private Child child;
+    ...
+}
+```
+
+복합키를 사용하지 않으므로 매핑도 쉽고 코드도 단순하다.
+
+### 1:1 식별관계
+
+조금 특별한 관계이다.
+
+Board
+- BOARD_ID(PK)
+- title
+
+BoardDetail
+- BOARD_ID(PK, FK)
+- content
+
+자식테이블 PK를 부모테이블 PK만 사용한다. 그래서 부모 PK가 복합키가 아니면 자식도 복합키가 아니어도 된다.
+
+```java
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.MapsId;
+import javax.persistence.OneToOne;
+
+@Entity
+public class Board {
+    @Id
+    @GeneratedValue
+    @Column(name = "BOARD_ID")
+    private Long id;
+
+    private String title;
+
+    @OneToOne(mappedBy = "board")
+    private BoardDetail boardDetail;
+    ...
+}
+
+@Entity
+public class BoardDetail {
+    @Id
+    private Long boardId;
+
+    @MapsId
+    @OneToOne
+    @JoinColumn(name = "BOARD_ID")
+    private Board board;
+    
+    private String content;
+    ...
+}
+
+// 실제 1대1 식별관계 사용
+public void save(){
+    Board board = new Board();
+    board.setTitle("제목");
+    em.persist(board);
+    
+    BoardDetail boardDetail = new BoardDetail();
+    boardDetail.setContent("내용");
+    boardDetail.setBoard(board);
+    em.persist(boardDetail);
+}
+
+```
+
+위처럼 복합키가 아닌 식별자의 경우 @MapsId 를 속성없이 사용하면 된다.
+- @id를 사용해서 식별자로 지정한 BoardDetail.boardId와 매핑된다.
+
+### 식별 비식별 관계 장단점
+
+DB 설계 관점에서 비식별관계를 선호한다.
+- 식별관계는 부모테이블의 기본키를 자식테이블로 전파한다.
+  - 자식테이블 기본키 칼럼이 점점 늘어난다.
+    - 조인 시 SQL이 복잡해지고 기본키 인덱스가 불필요하게 커질 수 있따.
+  - 테이블 구조가 유연하지 못하다.
+- 식별관계는 복합기본키를 만들어야하는 경우가 많다.
+- 식별관계 사용 시 기본키로 비즈니스 의미가 있는 자연 키 컬럼을 조합하는 경우가 많다.
+  - 하지만 비식별관계는 대리키를 주로 사용하므로, 변경에 덜 치명적이다.
+- JPA는 @GenerateValue 같은 대리키 생성을 위한 편리한 방법을 제공한다.
+
+물론 식별관계 장점도 있다.
+- 기본키 인덱스 활용하기 좋다.
+- 상위테이블 기본키 컬럼을 자식, 손자들이 가지므로, 특정상황에서는 join없이 쿼리가 가능하다.
+
+고로 꼭 필요한 곳에서는 적절하게 사용하는 것이 DB 테이블 설계의 묘를 살리는 방법이다.
+
+다시 한번 정리해보자.
+- 될수있으면 비식별 관계 사용, 기본키는 Long 타입의 대리키 사용하라.
+  - 선택적 비식별관계보다는 필수적 비식별관계를 사용하자.
+    - 선택적일때는 Null 허용하므로 외부조인을 사용해야 하나, 필수적인 경우 내부조인만 사용해도 된다.
+
+## 조인테이블
+
+테이블 연관관계 설정방법은 크게 2가지이다. 회원 사물함 예시를 생각해보자.
+- 조인 컬럼사용 (외래키)
+  - 만약 비식별관계(null 허용) 시
+    - 외부 조인 사용해야 한다. 내부조인 사용시 사물함이 null 인 회원은 조회되지 않는다.
+    - 아주 가끔 관계를 맺는다면 대부분 외래키 값이 null이 된다.
+- 조인 테이블 사용
+  - 가장 큰 단점은 테이블을 하나 추가해야한다.
+  - 회원과 사물함 2개의 테이블을 조인하려면 조인테이블까지 추가로 조인해야 한다.
+
+따라서 기본적으로 조인컬럼 사용하고, 필요 시 조인 테이블 사용하자.
+
+먼저 설명할 내용을 간략하게 소개한다.
+- 조인칼럼은 @JoinColumn 으로 매핑하고, 조인테이블은 @JoinTable 로 매핑한다.
+- 조인테이블은 주로 N:N을 풀어낼 때 사용한다. 하지만 1:1, 1:N, N:1에도 사용한다.
+  - 앞으로 살펴볼 내용은 만약 사용한다면 어떻게 사용하는지를 설명하는 것이다. N:N 풀기는 이전에 설명했다.
+  
+### 1. 1:1 조인테이블
+
+1:1 관계를 만드려면 조인테이블 외래키 칼럼에 각각 총 2개의 유니크 제약조건을 걸어야 한다.
+
+PARENT
+- PARENT_ID(PK)
+- NAME
+
+PARENT_CHILD (조인테이블)
+- PARENT_ID(PK, FK)
+- CHILD_ID(UNI, FK)
+
+CHILD
+- CHILD_ID(PK)
+- NAME
+
+```java
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.JoinTable;
+import javax.persistence.OneToOne;
+
+@Entity
+public class Parent {
+    @Id
+    @GeneratedValue
+    @Column(name = "PARENT_ID")
+    private Long id;
+    private String name;
+
+    @OneToOne
+    @JoinTable(name = "PARENT_CHILD",
+            joinColumns = @JoinColumn(name = "PARENT_ID"),
+    inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))
+    private Child child;
+    ...
+}
+
+@Entity
+public class Child {
+    @Id @GeneratedValue
+    @Column(name = "CHILD_ID")
+    private Long id;
+    private String name;
+    
+    // 양방향 매핑시 아래 추가
+    @OneToOne(mappedBy = "child")
+    private Parent parent;
+    ...
+}
+```
+
+@JoinTable을 사용한 것 말고는 대부분 유사하다.
+
+### 1:N 조인테이블
+
+PARENT
+- PARENT_ID(PK)
+- NAME
+
+PARENT_CHILD (조인테이블)
+- CHILD_ID(PK, FK)
+- PARENT_ID(FK)
+
+CHILD
+- CHILD_ID(PK)
+- PARENT_ID(FK)
+- NAME
+
+N쪽에 유니크 제약조건을 걸어야 한다.
+
+```java
+import java.util.ArrayList;
+import java.util.List;
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.JoinTable;
+import javax.persistence.OneToMany;
+
+@Entity
+public class Parent {
+    @Id
+    @GeneratedValue
+    @Column(name = "PARENT_ID")
+    private Long id;
+    private String name;
+
+    @OneToMany
+    @JoinTable(name = "PARENT_CHILD",
+            joinColumns = @JoinColumn(name = "PARENT_ID"),
+            inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))
+    private List<Child> child = new ArrayList<>();
+    ...
+}
+
+@Entity
+public class Child{
+    @Id @GeneratedValue
+    @Column(name = "CHILD_ID")
+    private Long id;
+    private String name;
+    ...
+}
+```
+
+### N:1 조인테이블
+
+```java
+import java.util.ArrayList;
+import java.util.List;
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.JoinTable;
+import javax.persistence.ManyToOne;
+import javax.persistence.OneToMany;
+
+@Entity
+public class Parent {
+    @Id
+    @GeneratedValue
+    @Column(name = "PARENT_ID")
+    private Long id;
+    private String name;
+
+    @OneToMany(mappedBy = "parent")
+    private List<Child> child = new ArrayList<>();
+    ...
+}
+
+@Entity
+public class Child {
+    @Id
+    @GeneratedValue
+    @Column(name = "CHILD_ID")
+    private Long id;
+    private String name;
+
+    @ManyToOne(optional = false)
+    @JoinTable(name = "PARENT_CHILD",
+            joinColumns = @JoinColumn(name = "CHILD_ID"),
+    inverseJoinColumns = @JoinColumn(name = "PARENT_ID"))
+    private Parent parent;
+    ...
+}
+```
+
+#### 4. N:N 조인 테이블
+
+PARENT
+- PARENT_ID(PK)
+- NAME
+
+PARENT_CHILD (조인테이블)
+- CHILD_ID(PK, FK)
+- PARENT_ID(PK, FK)
+
+CHILD
+- CHILD_ID(PK)
+- NAME
+
+N:N 를 풀기 위해서는 두 테이블의 컬럼을 합해서 복합 유니크 제약조건을 걸어야 한다.
+
+```java
+import java.util.ArrayList;
+import java.util.List;
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.JoinTable;
+import javax.persistence.ManyToMany;
+
+@Entity
+public class Parent {
+    @Id
+    @GeneratedValue
+    @Column(name = "PARENT_ID")
+    private Long id;
+    private String name;
+
+    @ManyToMany
+    @JoinTable(name = "PARENT_CHILD",
+            joinColumns = @JoinColumn(name = "PARENT_ID"),
+            inverseJoinColumns = @JoinColumn(name = "CHILD_ID"))
+    private List<Child> child = new ArrayList<>();
+    ...
+} 
+
+@Entity
+public class Child {
+    @Id @GeneratedValue
+    @Column(name = "CHILD_ID")
+    private Long id;
+    private String name;
+    ...
+}
+```
+
+## Entity 1개에 여러 테이블 매핑
+
+잘 사용하지는 않는다.
+
+Board 엔티티
+- id
+- String title
+- String content
+
+BOARD 테이블
+- BOARD_ID(PK)
+- title
+
+BOARD_DETAIL 테이블
+- BOARD_DETAIL_ID(PK, FK)
+- content
+
+```java
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.PrimaryKeyJoinColumn;
+import javax.persistence.SecondaryTable;
+import javax.persistence.Table;
+
+@Entity
+@Table(name = "BOARD")
+@SecondaryTable(name = "BOARD_DETAIL",
+        pkJoinColumns = @PrimaryKeyJoinColumn(name = "BOARD_DETAILE_ID"))
+public class Board {
+    @Id
+    @GeneratedValue
+    @Column(name = "BOARD_ID")
+    private Long id;
+    
+    private String title;
+    
+    @Column(table = "BOARD_DERAIL")
+    private String content;
+    ...
+}
+```
+
+- 엔티티 자체는 @Table 을 사용해서 BOARD 테이블과 매핑했다. 
+- BOARD_DETAIL 테이블을 @SecondaryTable 로 추가로 매핑했다. 
+  - name : 매핑할 다른 테이블의 이름
+  - pkJoinColumns : 매핑할 다른 테이블의 기본키 컬럼 속성
+- 마지막으로 content 는 @Column 지정을 통해 2번째 테이블에 매핑했다.
+
+더 많은 테이블을 매핑하고 싶다면 @SecondaryTables 를 사용하면 된다.
+
+```java
+import javax.persistence.SecondaryTable;
+import javax.persistence.SecondaryTables;
+
+@SecondaryTables({
+        @SecondaryTable(name = "BOARD_DETAIL"),
+        @SecondaryTable(name = "BOARD_FILE")
+})
+```
+
+하지만 애초에 세컨드 테이블을 만드는 것 보다 테이블 당 1개씩 엔티티를 만들어 1:1 매핑하는 것을 권장한다.
+세컨드 테이블은 항상 두 테이블을 조회하므로 최적화하기 어렵다.
 
 
 
