--- a/정리/8. 프록시와 연관관계 관리.md
+++ b/정리/8. 프록시와 연관관계 관리.md
@@ -76,7 +76,7 @@ org.hibernate.Hibernate.initialize(order.getMember()); // 프록시 초기화
 ### 즉시로딩 vs 지연로딩
 
 설정 자체는 `@ManyToOne(fetch = FetchType.EAGER)` 과 같이 하면 된다.
-각자 장단이 있으니 상황에 따라 선택하면 된다.
+각자 장단이 있으니 상황에 따라 선택하면 된다. 자주 함께 쓰인다면 즉시로딩이 더 좋을 수 있다.
 
 #### 즉시로딩
 
@@ -101,9 +101,157 @@ WHERE
   - `@JoinColumn(name = "TEAM_ID", nullable = false)` 처럼, 명시적으로 nullable false 를 지정해서 JPA에게 알려주자. 
   - 또는 `@ManyToOne(fetch = FetchType.EAGER, optional = false)`처럼 여기서 지정해줘도 된다.
 
+##### 즉시 로딩 주의점
+
+컬렉션을 2개 이상 즉시로딩하는 것은 권장하지 않는다.
+- 컬렉션과의 조인은 DB 테이블로보면 1:N 조인이다.
+- 문제는 서로 다른 컬렉션을 2개 이상 조인 시 결과가 N * M 이 되버려서 너무 많은 데이터를 반환할 수 있다.
+- JPA는 이렇게 조회된 결과를 메모리에서 필터링해서 반환한다. 그래서 2개 이상은 권장하지 않는다.
+
+컬렉션 즉시로딩은 항상 OUTER JOIN 이다.
+- 만약 회원 -> 팀 조회한다면 팀은 not null 이 보장되므로 내부조인을 사용할 수 있다.
+- 하지만 팀 -> 회원 조회 시 회원이 0명인 팀은 조회되지 않아버린다. 그래서 항상 외부조인할 수 밖에 없다.
+
+
+
 #### 지연로딩
 
 생략한다. 참고로 영속성 컨텍스트에 이미 있는 Entity는 굳이 프록시를 제공하지 않는다.
 
+##### 컬렉션 래퍼
 
+Hibernate는 Entity를 영속상태로 만들 때 컬렉션이 존재하면 추적관리목적으로 하이버네이트 내장컬렉션으로 변경한다. 이를 컬렉션 래퍼라고 한다.
+- 예를들어 List인 orders 가 있다고 치자. `getOrders()` 는 지연로딩 하지 않는다. `get(0)` 까지 해야 로딩을 한다.
 
+#### JPA 기본 fetch 전략
+
+즉시로딩 : @ManyToOne, @OneToOne
+- optional false = 내부조인 true = 외부조인
+
+지연로딩 : @OneToMany, @ManyToMany
+- optional false = 외부조인 true = 외부조인
+
+즉, 기본적으로 연관된 엔티티가 1개면 즉시로딩, 컬렉션이면 지연로딩한다.
+
+**모든 연관관계에 지연로딩 사용하는 것을 추천한다.**
+- 이후 애플리케이션이 어느정도 완료단계에 왔을 때 꼭 필요한 부분만 즉시로딩으로 최적화하면 된다.
+
+참고로 SQL을 직접사용하면 이런 유연한 최적화가 어렵다.
+
+### 영속성 전이 CASCADE
+
+transitive persistence
+
+특정 엔티티 영속화할 때 연관된 엔티티도 영속 상태로 만드는 것.
+
+```java
+import java.util.ArrayList;
+import java.util.List;
+import javax.persistence.CascadeType;
+import javax.persistence.Entity;
+import javax.persistence.EntityManager;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.ManyToOne;
+import javax.persistence.OneToMany;
+
+@Entity
+public class Parent {
+    @Id
+    @GeneratedValue
+    private Long id;
+
+    @OneToMany(mappedBy = "parent", cascade = CascadeType.PERSIST)
+    private List<Child> children = new ArrayList<>();
+}
+
+@Entity
+public class Child {
+    @Id
+    @GeneratedValue
+    private Long id;
+
+    @ManyToOne
+    private Parent parent;
+}
+
+public class Main {
+    // 영속성 전이를 사용하지 않는 경우 저장
+    private static void saveNoCascade(EntityManager em) {
+        // 부모 저장
+        Parent parent = new Parent();
+        em.persist(parent);
+
+        // 1번 자식 저장
+        Child child1 = new Child();
+        child1.setParent(parent);
+        parent.getChildren().add(child1);
+        em.persist(child1);
+
+        // 2번 자식 저장
+        Child child2 = new Child();
+        chil2.setParent(parent);
+        parent.getChildren().add(child2);
+        em.persist(child2);
+    }
+
+    // 하지만 parent mapping 에서 cascade 옵션을 줬으므로 아래와 같이 쓸 수 있다.
+    private static void saveWithCascade(EntityManager em){
+        Child child1 = new Child();
+        Child Child2 = new Child();
+        
+        Parent parent = new Parent();
+        chil1.setParent(parent);
+        child2.setParent(parent);
+        parent.getChildren().add(child1);
+        parent.getChildrent().add(child2);
+        
+        em.persist(parent);
+    }
+}
+```
+
+CascadeType.REMOVE 로 설정한 경우 parent 삭제하면 관련 child 들도 모두 삭제된다.
+- 그냥 find 로 parent 만 찾아서 제거하면 관련 child들도 모두 삭제되는 것
+- 만약 Cascade Remove 하지 않으면 어떻게 될까? 부모엔티티만 삭제되나, DB에서 무결성 예외가 발생하게 된다.
+
+cascade는 `cascade = {CascadeType.PERSIST, CascadeType.REMOVE}`처럼 한번에 여러 속성을 사용할 수 있다.
+- ALL, MERGE, REFRESH, DETACH 등 다양한 옵션이 있다.
+- 참고로 PERSIST 와 REMOVE 는 `persist()`나 `remove()`할때 전이가 발생하는것이 아니고, `flush()` 할때 전이가 발생한다.
+
+#### 고아객체 Cascade
+
+JPA는 부모 엔티티와 연관관계가 끊어진 자식 엔티티를 자동삭제하는 기능을 제공한다.
+- **ORPHAN Removal** 이라고 한다.
+- 이 기능 사용 시 부모 엔티티의 컬렉션에서 자식 엔티티 참조만 제거하면 자식엔티티가 자동으로 삭제된다.
+
+```java
+import java.util.ArrayList;
+import java.util.List;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.OneToMany;
+
+@Entity
+public class Parent {
+    @Id
+    @GeneratedValue
+    private Long id;
+
+    @OneToMany(mappedBy = "parent", orphanRemoval = true)
+    private List<Child> children = new ArrayList<>();
+}
+```
+
+고아 제거는 참조제거된 엔티티가 다른 곳에서도 참조하지 않는 고아로 판단하여 삭제하는 기능이다.
+- 따라서 특정 엔티티가 온전히 소유하는 경우에만 가능하다.
+- 그래서 @OneToOne, @OneToMany 에만 사용할 수 있다.
+- 기능이 하나 더 있는데, 개념적으로 볼 때 부모를 제거하면 자식은 고아가 된다.
+- 따라서 부모를 제거하면 자식도 같이 제거된다. 이는 Cascade.REMOVE 설정한 것과 같다.
+
+`CascadeType.ALL`과 `orphanRemoval = true`을 같이 사용하면 어떻게 될까?
+- 결론적으로 부모 엔티티를 통해 자식 생명주기를 관리할 수 있게 된다.
+- 자식을 저장하려면 부모에 등록만 하면되고, 자식을 삭제하려면 부모에서 제거하면 된다.
+
+**영속성 전이는 특히 DDD의 Aggregate Root 개념을 구현할 때 사용하면 편리하다.**
